--- a/02_StepByStep/04_SocketIO/public/index.html
+++ b/02_StepByStep/04_SocketIO/public/index.html
@@ -5,9 +5,12 @@
         <title>Socket.IO demo</title>
     </head>
     <body>
+        <!-- 3 -->
+        <!--<script src="/socket.io/socket.io.js"></script>--> 
+        <!-- view node_modules/socket.io/node_modules/socket.io-client/ -->
         
-        <script src="/socket.io/socket.io.js"></script> <!-- view node_modules/socket.io/node_modules/socket.io-client/ -->
-        <script>    
+        <!-- 4 -->
+        <!--<script>    
             var socket = io('http://localhost:5000');
 
             socket.on('message-from-server', function(event) {
@@ -17,6 +20,6 @@
                     greeting: 'Hello from the client'
                 });
             });
-        </script>
+        </script>-->
     </body>
 </html>
